2006-02-05  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/tag/Makefile.am:
	* gst-libs/gst/tag/gstvorbistag.c: (gst_vorbis_tag_add):
	* gst-libs/gst/tag/tag.h:
	* gst-libs/gst/tag/tags.c:
	(gst_tag_register_musicbrainz_tags_internal),
	(gst_tag_register_musicbrainz_tags):
	  Forward-port some tags stuff from the 0.8 branch. This is
	  mostly the addition of musicbrainz tags and their mapping
	  to vorbistags, and a vorbistag mapping of the language tag.

2006-02-05  Julien MOUTTE  <julien@moutte.net>

	* gst/playback/gstplaybin.c: (gen_text_element): Fix broken code
	refactoring.

2006-02-04  David Schleef  <ds@schleef.org>

	* ext/ogg/gstoggmux.c:
	* gst/typefind/gsttypefindfunctions.c:
	  Add Dirac typefinding and add dirac format to oggmux.

2006-02-03  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gstdecodebin.c: (try_to_link_1):
	  Don't put essential function call into
	  g_return_*() macro, otherwise it'll all be
	  replaced by NOOPs when compiling with
	  G_DISABLE_CHECKS defined.

2006-02-03  Edgard Lima <edgard.lima@indt.org.br>

	* ext/ogg/gstoggdemux.c:
	* ext/ogg/gstoggparse.c:
	* gst/tcp/gsttcpserversink.c:
	* sys/v4l/v4lsrc_calls.c:
	* sys/v4l/v4lsrc_calls.h:
	Just make it compile with --disable-gst-debug.

2006-02-03  Wim Taymans  <wim@fluendo.com>

	* ext/alsa/gstalsasink.c: (gst_alsasink_finalise),
	(gst_alsasink_class_init), (gst_alsasink_init),
	(gst_alsasink_write), (gst_alsasink_reset):
	* ext/alsa/gstalsasink.h:
	Add lock to protect alsa calls.
	Implement reset to flush samples ASAP, does not work
	with dmix though.

2006-02-02  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_provide_clock):
	Ugh.. getting late I guess...

2006-02-02  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_provide_clock),
	(gst_base_audio_sink_set_property),
	(gst_base_audio_sink_get_property), (gst_base_audio_sink_render):